# cli-util

./: Cargo.toml  README.md
src/: lib.rs  macros.rs
src/macros/: command_enum.rs
