[package]
name = "cli-util"
version = "0.1.0"
edition = "2021"
description = "Utilities for Rust CLI apps"
homepage = "https://github.com/DenisGorbachev/cli-util"
repository = "https://github.com/DenisGorbachev/cli-util"
readme = "README.md"
keywords = []
categories = []

[package.metadata.details]
tagline = ""
summary = ""
announcement = ""
readme = {}

[dependencies]

[dev-dependencies]
tokio = { version = "1.44.2", features = ["rt", "macros"] }

[package.metadata.cargo-machete]
ignored = ["derive_more", "derive-getters", "derive-new", "fmt-derive", "stub-macro", "standard-traits", "helpful", "subtype"]
